Redondeo el cálculo de los ángulos para que se hagan con 2 decimales, si no no daban las cuentas. Mejoro algunos de los cálculos para que sean más eficientes. Agrego el cálculo de los planetas alineados entre sí, y una api inicial para obtener los periodos de sequía. Otras cosas que no me acuerdo.

--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,6 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+    implementation('one.util:streamex:0.6.8')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
