--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.data.mongodb.uri=mongodb://ae77em:*_ae77em_*@ds145574.mlab.com:45574/meli
 
 
 #logging
-logging.level.org.springframework.data=debug
-logging.level.=error
+logging.level.org.springframework.data=info
+logging.level=error
